--- a/include/services/jolietraceviewer/www/css/jtv.css
+++ b/include/services/jolietraceviewer/www/css/jtv.css
@@ -7,6 +7,38 @@ body {
     width:100%;
 }
 
+#code {
+    position: fixed;
+    width: 90%;
+    height: 70%;
+    left: 5%;
+    top: 10%;
+    display: none;
+    z-index: 2;
+    background-color: white;
+    color: #333;
+    border: 1px solid black;
+    box-shadow: 5px 10px #aaa;
+}
+
+#code .button-close {
+    float:right;
+    padding:5px;
+    margin:10px;
+}
+
+#code #content {
+    width:100%;
+    height: 75%;
+    overflow-y: auto;
+    position: relative;
+    border-top: 2px solid black;
+}
+
+#code #message-menu {
+    padding:10px;
+}
+
 .headertable {
     width: 100%;
     font-size: 30px;
@@ -29,12 +61,6 @@ body {
     height:100vh;
 }
 
-#message #content {
-    width:100%;
-    height: 90%;
-    overflow-y: auto;
-    position: relative;
-}
 
 .line {
     background-color: #dddddd;
@@ -66,7 +92,7 @@ body {
     left: 5%;
     top: 10%;
     display: none;
-    z-index: 2;
+    z-index: 3;
     background-color: white;
     color: #333;
     border: 1px solid black;
@@ -77,6 +103,15 @@ body {
     float:right;
     padding:5px;
     margin:10px;
+}
+
+#message #content {
+    width:100%;
+    height: 90%;
+    overflow-y: auto;
+    position: relative;
+    border-top: 2px solid black;
+    padding:10px;
 }
 
 
